--- a/AACBB-2018.html
+++ b/AACBB-2018.html
@@ -90,6 +90,69 @@
       </div>
     </section>
 
+
+    <section id="photos">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="padding-bottom-15">Photos from the workshop</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/Opening%20session.jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/Opening%20session.jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(1).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(1).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(2).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(2).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(candid%20photo).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(candid%20photo).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/bertil%20at%20aacbb%20(candid%20camera).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20at%20aacbb%20(candid%20camera).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/bertil%20at%20aacbb.jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20at%20aacbb.jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/bertil%20speaks%20at%20aacbb.jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20speaks%20at%20aacbb.jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/can%20at%20aacbb%20(1).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(1).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/can%20at%20aacbb%20(2).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(2).jpg">
+                    </a>
+                </div>
+                <div class="col-lg-3">
+                    <a href="img/workshop-2018/can%20at%20aacbb%20(3).jpg">
+                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(3).jpg">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="cfp">
         <div class="container">
             <div class="row">
@@ -185,13 +248,19 @@
                     <tr>
                         <td>8:40 - 9:20</td>
                         <td><strong>Keynote 1: Onur Mutlu (ETH, CMU)
-                            <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong></td>
+                            <br>
+                                <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
+                            (<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>)
+                        </td>
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
                     <tr>
                         <td>09:20 - 09:40</td>
                         <td>Mohammed Alser+, Hasan Hassan*, Akash Kumar&, Onur Mutlu* and Can Alkan+ (+Bilkent Univ., *ETH Zurich, &TU Dresden)
-                            <br><i>Exploring Speed/Accuracy Trade-offs</i></td>
+                            <br>
+                                <i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></a>&nbsp;
+                            &nbsp;&nbsp;(<a href="./slides/2018/MAGNET_AACBB_Vienna2018.pptx">slides</a>)
+                        </td>
                     </tr>
                     <tr>
                         <td>09:20 - 09:40</td>
@@ -221,15 +290,10 @@
                         <td>Jose M. Herruzo+, Sonia Gonzalez-Navarro+, Pablo Ibañez*, Victor Viñals*, Jesus Alastruey* and Oscar Plata+ (+Univ. of Malaga, *Univ. of Zaragoza)
                             <br><i>Exact Alignment with FM-index on the Intel Xeon Phi Knights Landing Processor</i></td>
                     </tr>
-                    <tr>
-                        <td>11:50 - 12:10</td>
-                        <td>Zheming Jin and Kazutomo Yoshii (ANL)
-                            <br><i>Optimizations of Sequence Alignment on FPGA: A Case Study of Extended Sequence Alignment</i></td>
-                    </tr>
 
                     <tr><td><br></td><td><br></td></tr>
                     <tr>
-                        <td>12:10 - 13:30</td>
+                        <td>11:50 - 13:30</td>
                         <td>Lunch</td>
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
@@ -268,14 +332,18 @@
                     <tr>
                         <td>15:30 - 16:10</td>
                         <td><strong>Invited Talk: Can Alkan (Bilkent University)
-                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong></td>
+                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong>&nbsp;
+                            (<a target="_blank" href="./slides/2018/alkan-aacbb.pptx">slides</a>)
+                        </td>
                     </tr>
 
                     <!-- Paper session 4 (2 regular papers) -->
                     <tr>
                         <td>16:10 - 16:30</td>
                         <td>Sergiu Mosanu and Mircea Stan (UVA)
-                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i></td>
+                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i>&nbsp;
+                            (<a target="_blank" href="./slides/2018/aacbb-serg-presi.pdf">slides</a>)
+                        </td>
                     </tr>
                     <tr>
                         <td>16:30 - 16:50</td>
@@ -293,19 +361,23 @@
 
                     <!-- Paper session 3 (3 regular papers) -->
                     <tr>
-                        <td>14:10 - 14:30</td>
+                        <td>17:00 - 17:15</td>
                         <td>Meysam Taassori+, Anirban Nag+, Keeton Hodgson+, Ali Shafiee* and Rajeev Balasubramonian+ (+Univ. of Utah, *Samsung Electronics)
-                            <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i></td>
+                            <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i>&nbsp;
+                            (<a target="_blank" href="./slides/2018/HPCA_2018_Genomics_An2_mychange.pdf">slides</a>)
+                        </td>
                     </tr>
                     <tr>
-                        <td>14:30 - 14:50</td>
+                        <td>17:15 - 17:30</td>
                         <td>Meysam Roodi and Andreas Moshovos (Univ. of Toronto)
                             <br><i>Gene Sequencing: Where Time Goes</i></td>
                     </tr>
                     <tr>
-                        <td>14:50 - 15:10</td>
+                        <td>17:30 - 17:45</td>
                         <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto (BSC)
-                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i></td>
+                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i>&nbsp;
+                            (<a target="_blank" href="./slides/2018/20180224-aacbb-mmoreto.pdf">slides</a>)
+                        </td>
                     </tr>
 
                     <tr><td><br></td><td><br></td></tr>
@@ -341,13 +413,32 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, CMU / ETH Zurich</a></h4>
+                                <h4><a  href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH Zurich / CMU </a></h4>
                                 <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
                                 <h5 class="subheading">8:40 - 9:20</h5>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
-                                <!--<p class="text-muted bio-text"><strong>Short bio: </strong> Onur Mutlu is a Full Professor of Computer Science at ETH Zurich. He previously held the William D. and Nancy W. Strecker Early Career Professorship at Carnegie Mellon University, and is also a faculty member there. His current broader research interests are in computer architecture, systems, and bioinformatics. He is especially interested in interactions across domains and between applications, system software, compilers, and microarchitecture, with a major current focus on memory and storage systems. He obtained his PhD and MS in ECE from the University of Texas at Austin and BS degrees in Computer Engineering and Psychology from the University of Michigan, Ann Arbor. His industrial experience spans starting the Computer Architecture Group at Microsoft Research (2006-2009), and various product and research positions at Intel Corporation, Advanced Micro Devices, and VMware. He received the inaugural IEEE Computer Society Young Computer Architect Award, the inaugural Intel Early Career Faculty Award, faculty partnership awards from various companies, and a healthy number of best paper or "Top Pick" paper recognitions at various computer systems and architecture venues. His computer architecture course lectures and materials are freely available on YouTube, and his research group makes software artifacts freely available online.</p>-->
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
+                                    Genome analysis is the foundation of many scientific and medical discoveries as well as a key pillar of personalized medicine.
+                                    Any analysis of a genome fundamentally starts with the reconstruction of the genome from its sequenced fragments.
+                                    This process is called read mapping.
+                                    One key goal of read mapping is to find the variations that are present between the sequenced genome and reference genome(s) and to tolerate the errors introduced by the genome sequencing process.
+                                    Read mapping is currently a major bottleneck in the entire genome analysis pipeline because state-of-the-art genome sequencing technologies are able to sequence a genome much faster than the computational techniques that are employed to reconstruct the genome.
+                                    New sequencing technologies, like nanopore sequencing, greatly exacerbate this problem while at the same time making genome sequencing much less costly.
+                                    <br>
+                                    <br>
+                                    This talk describes our ongoing journey in greatly improving the
+                                    performance of genome read mapping. We first provide a brief
+                                    background on read mappers that can comprehensively find variations
+                                    and tolerate sequencing errors. Then, we describe both algorithmic and
+                                    hardware-based acceleration approaches. Algorithmic approaches exploit
+                                    the structure of the genome as well as the structure of the underlying
+                                    hardware. Hardware-based acceleration approaches exploit specialized
+                                    microarchitectures or new execution paradigms like processing in
+                                    memory. We show that significant improvements are possible with both algorithmic and hardware-based approaches and their combination.
+                                    We conclude with a foreshadowing of future challenges brought about by very low cost yet highly error prone new sequencing technologies.
+
+                                </p>
 
                             </div>
                         </div>
@@ -414,11 +505,22 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a href="http://www.cs.bilkent.edu.tr/~calkan/">Can Alkan, Bilkent University</a></h4>
-                                <h3 class="keynote-subheading">"Addressing Computational Burden to Realize Precision Medicine"</h3>
+                                <h3 class="keynote-subheading">"Addressing Computational Burden for Low-Priority Genome Analyses                                    "</h3>
                                 <h5 class="subheading">15:30-16:10</h5>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong> TBD</p>
+                                <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
+                                    The main computational bottleneck of HTS data analysis is to map the reads to a reference genome, for which clusters are typically used.
+                                    However, building clusters large enough to handle hundreds of petabytes of data is infeasible.
+                                    Additionally, the reference genome is also periodically updated to fix errors and include newly sequenced insertions, therefore in many large scale genome projects the reads are realigned to the new reference.
+                                    Therefore, we need to explore volunteer grid computing technologies to help ameliorate the need for large clusters.
+                                    However, since the computational demands of HTS read mapping is substantial, and the turnaround of analysis should be fast, we also need a method to motivate volunteers to dedicate valuable resources.
+                                    <br>
+                                    For this purpose, we propose to merge distributed read mapping techniques with the popular cryptocurrency protocols.
+                                    Cyryotocurrencies such as Bitcoin calculate a value (called nonce) to ensure new block (i.e. “money”) creations are limited in the system, however, this calculation serves no other practical purpose.
+                                    Our solution (Coinami) replaces nonce with a token signed by an authority that can be acquired by returning the alignment results assigned by the authority.
+                                    Authorities have two main tasks in our system: 1) inject new problem sets (i.e. “alignment problems”) into the system, and 2) check for the validity of the results to prevent counterfeit
+                                </p>
                                 <!--<p class="text-muted"><strong>Short speaker bio: </strong> TBD</p>-->
 
                             </div>
@@ -429,6 +531,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- Organizers -->
     <section class="bg-light" id="organizers">
