Updated main page

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
-                    <h2 class="section-heading text-center">Call For Participation</h2>
+                    <h2 class="section-heading text-center">Call For Papers</h2>
                     <h3 class="about-text">
                         This workshop focuses on architecture and design of hardware accelerators for computational biology and bioinformatics problems.
                         The schedule has 4 invited talks, 13 paper presentations.
@@ -208,7 +208,6 @@
                     <h2 class="section-heading text-center">Program Committee</h2>
                     <ul id="program-committee-list">
                         <li><a href="http://www.eecs.wsu.edu/~ananth/">Ananth Kalyanaraman, WSU</a></li>
-                        <li><a href="http://www.staff.uni-mainz.de/schmi033/">Bertil Schmidt, University of Mainz</a></li>
                         <li><a href="http://www.cs.bilkent.edu.tr/~calkan/">Can Alkan, Bilkent University</a></li>
                         <li><a href="http://www.cs.rochester.edu/~ipek/Home.html">Engin Ipek, University of Rochester</a></li>
                         <li><a href="http://vast.cs.ucla.edu/people/faculty/jason-cong">Jason Cong, UCLA</a></li>
@@ -216,7 +215,6 @@
                         <li><a href="http://www.ece.virginia.edu/faculty/stan.html">Mircea Stan, UVA</a></li>
                         <li><a href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH/CMU</a></li>
                         <li><a href="http://webee.technion.ac.il/~ran/">Ran Ginosar, Technion</a></li>
-                        <li><a href="https://www.cc.gatech.edu/~saluru/">Srinivas Aluru, Georgia Tech</a></li>
                         <li><a href="http://www.ece.ucsb.edu/~yuanxie/">Yuan Xie, UCSB</a></li>
                     </ul>
                 </div>
