--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link js-scroll-trigger" href="#organizers">Organizers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://hpca2018.ece.ucsb.edu/" target="_blank">HPCA 2018</a>
+              <a class="nav-link" href="AACBB-2018.html" target="_blank">1<sup>st</sup> AACBB</a>
             </li>
 
           </ul>
@@ -66,12 +66,12 @@
     <header class="masthead">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">HPCA 2018 Workshop on</div>
+                <div class="intro-lead-in">2<sup>nd</sup> HPCA Workshop on</div>
                 <div class="intro-heading">Accelerator Architecture in <br> Computational Biology and Bioinformatics</div>
 
             </div>
-            <h3 class="heading-subtitle">February 24th, 2018</h3>
-            <h3 class="heading-subtitle">Vienna, Austria</h3>
+            <h3 class="heading-subtitle">February 17th, 2019</h3>
+            <h3 class="heading-subtitle">Washington D.C., USA</h3>
         </div>
     </header>
 
@@ -83,75 +83,13 @@
             <h2 class="section-heading">About</h2>
             <h3 class="about-text">Over the last decade, the advent of high-throughput sequencing techniques brought an exponential growth in biosequence database sizes. With increased throughput demand and popularity of computational biology tools, reducing time-to-solution during computational analysis has become a significant challenge in the path to scientific discovery.<br>
                 <br>Conventional computer architecture is proven to be inefficient for computational biology and bioinformatics tasks. For example, aligning even several hundred DNA or protein sequences using progressive multiple alignment tools consumes several CPU hours on high performance computer. Hence, computational biology and bioinformatics rely on hardware accelerators to allow processing to keep up with the increasing amount of data generated from biology applications.<br>
-                <br>    In a typical application, dominant portion of the runtime is spent in a small number of computational kernels, making it an excellent target for hardware acceleration. The combination of increasingly large datasets and high performance computing requirements make computational biology prime candidate to benefit from accelerator architecture research. Potential directions include 3D integration, near-data processing, automata processing, associative processing and reconfigurable architectures.<br>
+                <br>In a typical application, dominant portion of the runtime is spent in a small number of computational kernels, making it an excellent target for hardware acceleration. The combination of increasingly large datasets and high performance computing requirements make computational biology prime candidate to benefit from accelerator architecture research. Potential directions include 3D integration, near-data processing, automata processing, associative processing and reconfigurable architectures.<br>
             </h3>
           </div>
         </div>
       </div>
     </section>
 
-
-    <section id="photos">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2 class="padding-bottom-15">Photos from the workshop</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/Opening%20session.jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/Opening%20session.jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(1).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(1).jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(2).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(2).jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/onur%20speaks%20at%20aacbb%20(candid%20photo).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/onur%20speaks%20at%20aacbb%20(candid%20photo).jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/bertil%20at%20aacbb%20(candid%20camera).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20at%20aacbb%20(candid%20camera).jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/bertil%20at%20aacbb.jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20at%20aacbb.jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/bertil%20speaks%20at%20aacbb.jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/bertil%20speaks%20at%20aacbb.jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/can%20at%20aacbb%20(1).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(1).jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/can%20at%20aacbb%20(2).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(2).jpg">
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <a href="img/workshop-2018/can%20at%20aacbb%20(3).jpg">
-                        <img class="img-fluid img-thumbnail" src="img/workshop-2018/can%20at%20aacbb%20(3).jpg">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="cfp">
         <div class="container">
@@ -160,7 +98,6 @@
                     <h2 class="section-heading text-center">Call For Papers</h2>
                     <h3 class="about-text">
                         This workshop focuses on architecture and design of hardware accelerators for computational biology and bioinformatics problems.
-                        The schedule has 4 invited talks, 13 paper presentations.
                         Presentation topics cover the following:
                     </h3>
                     <ul>
