AACBB 2019: Added dates and first CFP link

--- a/index.html
+++ b/index.html
@@ -113,22 +113,20 @@
                         <li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
                     </ul>
 
-                    <!--<h2>Submission Guidelines</h2>
+                    <h2>Submission Guidelines</h2>
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
-                        <a href="https://easychair.org/conferences/?conf=aacbb2018">https://easychair.org/conferences/?conf=aacbb2018</a>
+                        <a href="https://easychair.org/conferences/?conf=aacbb2019">https://easychair.org/conferences/?conf=aacbb2019</a>
                     </h5>
-                    <h6>For a PDF version of the CFP click here: <a href="img/AACBB.Call.for.Papers.pdf" target="_blank">Download CFP</a></h6>
+                    <h6>For a PDF version of the CFP click here: <a href="img/AACBB2019.CFP.pdf" target="_blank">Download CFP</a></h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p>
-                    <p>The full version should be a PDF file in HPCA24 submission format. For formatting instructions please refer to:
-                        <a href="http://hpca2018.ece.ucsb.edu/pages/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
+                    <p>The full version should be a PDF file in HPCA25 submission format. For formatting instructions please refer to:
+                        <a href="http://hpca2019.seas.gwu.edu/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
                     </p>
 
                     <h2>Important Dates</h2>
-                    <h5>Submission deadline: <del>November 30, 2017.</del>
-                        <del>December 15, 2017.</del>
-                        <u>Monday, December 18, 2017</u> (extended due to a special request).</h5>
-                    <h5>Notification by: <u>December 21, 2017.</u></h5>
-                    -->
+                    <h5><u>Submission deadline</u>: Monday, December 8th, 2018, EoD AoE.</h5>
+                    <h5><u>Notification by</u>: December 15th, 2018.</h5>
+
 
                     <h4>The complete schedule can be found <a href="#schedule">below</a></h4>
 
