Added comment on not publishing proceedings

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                     <p>The full version should be a PDF file in HPCA25 submission format. For formatting instructions please refer to:
                         <a href="http://hpca2019.seas.gwu.edu/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
                     </p>
+                    <p><strong>We will not publish paper proceedings. Therefore, submitting to this workshop does not conflict with submissions to other venues.</strong></p>
 
                     <h2>Important Dates</h2>
                     <h5><u>Submission deadline</u>: Monday, December 8th, 2018, EoD AoE.</h5>
