Added SW acceleration and linked to updated CFP

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="col-lg-12 ">
                     <h2 class="section-heading text-center">Call For Papers</h2>
                     <h5>
-                        This workshop focuses on architecture and design of hardware accelerators for computational biology and bioinformatics problems.
+                        This workshop focuses on architecture and design of hardware and software accelerators for computational biology and bioinformatics problems.
                         <br><br>Topics of interest cover the following:
                     </h5>
                     <ul>
@@ -106,18 +106,19 @@
                         <li>3D memory-logic stack based accelerators</li>
                         <li>Automata processing in bioinformatics and computational biology applications</li>
                         <li>Associative processing in bioinformatics and computational biology applications</li>
-                        <li>Near-data (in-memory) acceleration bioinformatics and computational biology applications</li>
+                        <li>Near-data (in-memory) acceleration of bioinformatics and computational biology applications</li>
                         <li>Emerging memory technologies and their impact on bioinformatics and computational biology</li>
                         <li>Embedded and reconfigurable architectures</li>
                         <li>Field programmable logic based accelerators</li>
                         <li>Bioinformatics and computational biology-inspired hardware/software trade-offs</li>
+                        <li>Software acceleration of computational biology and bioinformatics</li>
                     </ul>
 
                     <h2>Submission Guidelines</h2>
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
                         <a href="https://easychair.org/conferences/?conf=aacbb2019">https://easychair.org/conferences/?conf=aacbb2019</a>
                     </h5>
-                    <h6>For a PDF version of the CFP click here: <a href="img/AACBB2019.CFP.pdf" target="_blank">Download CFP</a></h6>
+                    <h6>For a PDF version of the CFP click here: <a href="img/Workshop%20on%20AACBB%20-%202019%20-%20extended%20CFP.pdf" target="_blank">Download CFP</a></h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p>
                     <p>The full version should be a PDF file in HPCA25 submission format. For formatting instructions please refer to:
                         <a href="http://hpca2019.seas.gwu.edu/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
