--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
                         <a href="https://easychair.org/conferences/?conf=aacbb2019">https://easychair.org/conferences/?conf=aacbb2019</a>
                     </h5>
-                    <h6>For a PDF version of the CFP click here: <a href="img/Workshop%20on%20AACBB%20-%202019%20-%20extended%20CFP.pdf" target="_blank">Download CFP</a></h6>
+                    <h6>For a PDF version of the CFP click here: <a href="CFP/Workshop%20on%20AACBB%20-%202019%20-%20extended%20CFP.pdf" target="_blank">Download CFP</a></h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p>
                     <p>The full version should be a PDF file in HPCA25 submission format. For formatting instructions please refer to:
                         <a href="http://hpca2019.seas.gwu.edu/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
