Added poster session to CFP

--- a/index.html
+++ b/index.html
@@ -123,14 +123,19 @@
                     <p>The full version should be a PDF file in HPCA25 submission format. For formatting instructions please refer to:
                         <a href="http://hpca2019.seas.gwu.edu/guidelines_for_submission.html">HPCA Guidelines for Submission</a>
                     </p>
-                    <p><strong>We will not publish paper proceedings. Therefore, submitting to this workshop does not conflict with submissions to other venues.</strong></p>
 
                     <h2>Important Dates</h2>
                     <h5><u>Submission deadline</u>: Monday, December 8th, 2018, EoD AoE.</h5>
                     <h5><u>Notification by</u>: December 15th, 2018.</h5>
 
+                    <h3 class="margin-top-30">Important Notes</h3>
+                    <ul>
+                        <li><h6>Submitting and presenting a paper in the workshop does not preclude publication in other venues (there are no proceedings to this workshop).</h6></li>
+                        <li><h6>We will have a poster session. Some papers might be accepted as <i>poster papers</i>.</h6></li>
+                        <li><h6>We plan to have a lightning round, where the authors of a poster paper are given an opportunity to present their work to all attendants in a “lightning” 2 min presentation.</h6></li>
+                    </ul>
 
-                    <h4>The complete schedule can be found <a href="#schedule">below</a></h4>
+                    <h4>A tentative workshop schedule can be found <a href="#schedule">below</a></h4>
 
                 </div>
             </div>
