--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                     </p>
 
                     <h2>Important Dates</h2>
-                    <h5><u>Submission deadline</u>: Monday, December 15th, 2018, EoD AoE.</h5>
-                    <h5><u>Notification by</u>: December 22nd, 2018.</h5>
+                    <h5><u>Submission deadline</u>: <strike>Dec 15th</strike> Dec 25th, 2018, EoD AoE.</h5>
+                    <h5><u>Notification by</u>: Dec 28th, 2018.</h5>
 
                     <h3 class="margin-top-30">Important Notes</h3>
                     <ul>
