Added Bill Dally as a speaker

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                         <td>Regular paper session: 1 papers</td>
                     </tr>
                     <tr>
-                        <td><strong>11:35 - 12:00</strong></td>
-                        <td><strong>lightning round session: 2min presentation for each poster</strong></td>
+                        <td>11:35 - 12:00</td>
+                        <td>lightning round session: 2min presentation for each poster</td>
                     </tr>
 
                     <tr><td><br></td><td><br></td></tr>
@@ -255,29 +255,35 @@
                     <tr><td><br></td><td><br></td></tr>
 
                     <tr>
-                        <td><strong>13:30 - 14:15</strong></td>
-                        <td><strong>Keynote 2: Jason Cong (UCLA)</strong></td>
+                        <td><strong>13:30 - 14:20</strong></td>
+                        <td><strong>Keynote 2: William Dally (Stanford & NVIDIA)</strong></td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
-
-                    <tr>
-                        <td>14:15 - 14:55</td>
-                        <td>Regular paper session: 2 paper</td>
-                    </tr>
-
                     <tr><td><br></td><td><br></td></tr>
 
                     <tr>
-                        <td>14:55 - 15:45</td>
+                        <td>14:20 - 15:00</td>
+                        <td>Regular paper session: 2 papers</td>
+                    </tr>
+
+
+                    <tr>
+                        <td>15:00 - 15:50</td>
                         <td>Poster session 2 and coffee break</td>
                     </tr>
 
                     <tr><td><br></td><td><br></td></tr>
 
+
                     <tr>
-                        <td>15:45 - 16:45</td>
+                        <td>15:50 - 16:50</td>
                         <td>Regular paper session: 3 papers</td>
                     </tr>
+                    <tr>
+                        <td>16:50 - 17:00</td>
+                        <td>Closing remarks</td>
+                    </tr>
+                    <tr><td><br></td><td><br></td></tr>
                     <!-- Paper session 3 (3 regular papers) -->
                     <!--<tr>
                         <td>14:10 - 14:30</td>
@@ -421,13 +427,13 @@
 
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/speakers/2019/Jason_Cong.jpg" alt="">
+                            <img class="rounded-circle img-fluid" src="img/speakers/2019/william-dally_profilephoto.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a target="_blank" href="http://vast.cs.ucla.edu/people/faculty/jason-cong">Jason Cong, University of California, Los Angeles</a></h4>
+                                <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William Dally, Stanford & NVIDIA</a></h4>
                                 <h3 class="keynote-subheading">Talk title: TBD</h3>
-                                <h5 class="subheading">13:30-14:15</h5>
+                                <h5 class="subheading">13:30-14:20</h5>
                             </div>
                             <div class="timeline-body">
                                 <!--<p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
